# rlhf-finetune-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
alignment/: __init__.py  comparison.py  dpo_trainer.py  ppo_trainer.py
configs/: dpo_config.yaml  ppo_config.yaml  reward_config.yaml  sft_config.yaml
data/: __init__.py  curation.py  formatting.py  preference.py  synthetic.py
evaluation/: __init__.py  benchmarks.py  human_eval.py  reward_hacking.py  scaling.py
finetune/: __init__.py  data_collator.py  lora_config.py  sft_trainer.py
notebooks/: 01_data_exploration.ipynb  02_sft_training.ipynb  03_reward_modeling.ipynb  04_ppo_vs_dpo.ipynb  05_reward_hacking_analysis.ipynb
reward/: __init__.py  reward_analysis.py  reward_model.py  reward_trainer.py
scripts/: __init__.py  run_comparison.py  run_dpo.py  run_ppo.py  run_reward.py  run_sft.py
tests/: __init__.py  test_alignment.py  test_data.py  test_reward.py  test_sft.py
