[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlhf-finetune-pipeline"
version = "0.1.0"
description = "End-to-end post-training pipeline for LLMs: Data Curation → SFT → LoRA/QLoRA → Reward Modeling → PPO/DPO"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "llm",
    "rlhf",
    "reinforcement-learning",
    "fine-tuning",
    "transformers",
    "ppo",
    "dpo",
    "lora",
    "qlora",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "trl>=0.7.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.14.0",
    "accelerate>=0.25.0",
    "deepspeed>=0.12.0",
    "wandb>=0.16.0",
    "evaluate>=0.4.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "datasketch>=1.6.0",
    "detoxify>=0.5.0",
    "rouge-score>=0.1.2",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rlhf-finetune-pipeline"
Documentation = "https://github.com/yourusername/rlhf-finetune-pipeline#readme"
Repository = "https://github.com/yourusername/rlhf-finetune-pipeline"
Issues = "https://github.com/yourusername/rlhf-finetune-pipeline/issues"

[project.scripts]
run-sft = "scripts.run_sft:main"
run-reward = "scripts.run_reward:main"
run-ppo = "scripts.run_ppo:main"
run-dpo = "scripts.run_dpo:main"
run-comparison = "scripts.run_comparison:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "finetune*", "reward*", "alignment*", "evaluation*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
